# cue_cards

./: .gitignore  main.cpp
src/: App.cpp  App.h  CMakeLists.txt  CueCard.cpp  CueCard.h  CueCardCollection.cpp  CueCardCollection.h  CueCardManager.cpp  CueCardManager.h  CueCardPanel.cpp  CueCardPanel.h  CueCardReader.cpp  CueCardReader.h  MainFrame.cpp  MainFrame.h  main.cpp
src/test/: CueCardManagerTest.cpp  CueCardReaderTest.cpp
